--- a/_layouts/tmp.html
+++ b/_layouts/tmp.html
@@ -11,11 +11,17 @@
 <div class="container">
   <header>
   <div class="row">
+    <div class="column left">
+      <img src="{{ site.baseurl }}/assets/images/default.jpg" alt="Default" style="width:130px; border-radius:50%">
+    </div>
     <div class="column right1">
       {% if page.title %}{{ page.title | escape }}
       {% else %}{{ site.title | escape }}{% endif %}
     </div>
     <div class="column right2">
+      {% if page.author %}{{ page.author | escape }}
+      {% else %}{{ site.author | escape }}{% endif %}
+      ---
       {% if page.address %}{{ page.address | escape }}
       {% else %}{{ site.address | escape }}{% endif %}
     </div>
