--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- File _layouts/layout.html           -->
-<!-- (c) 2021 - 2021 VauLSMorg           -->
-<!-- REV00: Sun 04 Jul 2021 10:48:43 WIB -->
-<!-- START: Wed 17 Feb 2021 19:44:53 WIB -->
+<!-- (c) 2021 - 2022 VauLSMorg           -->
+<!-- REV00: Sun 04 Jul 2021 10:00        -->
+<!-- START: Wed 17 Feb 2021 19:00        -->
 <!-- This is a free HTML file            -->
 {% include head.html %}
 <body class="plainclass1">
@@ -11,11 +11,11 @@
 <div class="container">
   <header>
   <div class="row">
-    <div class="column right1">
+    <div class="column right2">
+      <br>
       {% if page.title %}{{ page.title | escape }}
       {% else %}{{ site.title | escape }}{% endif %}
-    </div>
-    <div class="column right2">
+      <br><br>
       {% if page.address %}{{ page.address | escape }}
       {% else %}{{ site.address | escape }}{% endif %}
     </div>
