--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,8 +82,8 @@
 }
 
 .right1 {
-  height:           66px;
-  width:            calc(100% - 200px);
+  height:           100px;
+  width:            200px;
   padding-top:      24px;
   padding-bottom:   0px;
   padding-left:     30px;
@@ -92,14 +92,11 @@
 }
 
 .right2 {
-  height:           50px;
-  width:            calc(100% - 200px);
   padding-top:      5px;
   padding-bottom:   5px;
   padding-left:     30px;
   font-size:        1.3em;
   font-weight:      bold;
-}
 }
 
 .youtube {
